trying to fix flexbox on ios, finally

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 @import url(http://fonts.googleapis.com/css?family=Varela+Round);
+@import url(http://fonts.googleapis.com/css?family=Cabin);
 
 body {
     margin: 0;
     font-size: 20px;
-    font-family: "Varela Round", sans-serif;
+    font-family: Cabin, sans-serif;
     background-color: #eee;
     display: flex;
+    display: -webkit-flex;
     min-height: 100vh;
 }
 
@@ -76,12 +78,17 @@ hr {
 }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
     font-family: "Varela Round", sans-serif;
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    justify-content: center;
+    -webkit-justify-content: center;
+    align-content: center;
+    -webkit-align-content: center;
+    align-items: center;
+    -webkit-align-items: center;
 }
   
 nav a {
@@ -103,6 +110,7 @@ article {
     max-width: 40rem;
     padding: 0.5em 1em 0.5em 1em; 
     flex: 1 1;
+    -webkit-flex: 1 1;
 }
 
 h1 {
@@ -120,6 +128,10 @@ h3 {
 
 h2, h3 {
     margin-bottom: 0.5em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Varela Round", sans-serif;
 }
 
 .contact-links a {
@@ -168,11 +180,13 @@ h2, h3 {
 @media (orientation: portrait) {
 
 	body {
-                flex-direction: column;
+            flex-direction: column;
+            -webkit-flex-direction: column;
 	}
 
         nav {
             flex: 1 1 auto;
+            -webkit-flex: 1 1 auto;
         }
 
             nav a {
